Fixed navbar on smaller screens

--- a/style.css
+++ b/style.css
@@ -405,10 +405,21 @@ h1 {
     transform: translate(-50%, -50%);
   }
 
-  .navbar-brand {
-    margin-left: 50px;
-    margin-right: 50px;
-  }
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+}
+
+.navbar ul {
+    flex-direction: column;
+    gap: 10px;
+    padding-left: 0; /* Adjust padding */
+}
+
+.navbar-brand {
+    margin-left: 0;
+    margin-right: 0;
+}
 }
 
 /* Projects */
